objects/ssot__Application__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountContactId__c</fullName>
        <label>Account Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AmountPaid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationCategory__c</fullName>
        <label>Application Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationName__c</fullName>
        <label>Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationNumber__c</fullName>
        <label>Application Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationReferenceNumber__c</fullName>
        <label>Application Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationStatus__c</fullName>
        <label>Application Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationTier__c</fullName>
        <label>Application Tier</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Application_AccountId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application_AccountId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Application_AccountId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>Application_AccountId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__AppliedDateTime__c</fullName>
        <label>Applied Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ApplyToOrganizationId__c</fullName>
        <label>Apply-To Organization</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApprovedDateTime__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Approver__c</fullName>
        <label>Approver</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthorizationApplicationId__c</fullName>
        <label>Authorization Application</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitApplicationId__c</fullName>
        <label>Benefit Application</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EducationApplicationId__c</fullName>
        <label>Education Application</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialApplicationId__c</fullName>
        <label>Financial Application</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FundingApplication__c</fullName>
        <label>Funding Application</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Application Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsApprovalRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOwnerEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Owner Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsSubmittedByThirdParty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Submitted By Third Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentApplication__c</fullName>
        <label>Parent Application</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentDate__c</fullName>
        <label>Payment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryApplicantId__c</fullName>
        <label>Primary Applicant</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RejectionReason__c</fullName>
        <label>Rejection Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequirementsCompleteDateTime__c</fullName>
        <label>Requirements Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SubmittedBy__c</fullName>
        <label>Submitted By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UsageType__c</fullName>
        <label>Usage Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WasReturned__c</fullName>
        <label>Was Returned to Applicant</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817642102_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application_SubmittedBy_map_Account__rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Application_SubmittedBy_map_Account__rel</relationshipLabel>
        <relationshipName>rel_1719817642102_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817764897_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application_AccountContactId_map_Acc_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>Application_AccountContactId_map_Acc_rel</relationshipLabel>
        <relationshipName>rel_1719817764897_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817766721_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application_Approver_map_AccountCont_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>Application_Approver_map_AccountCont_rel</relationshipLabel>
        <relationshipName>rel_1719817766721_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>